# SarcasmDetection

./: CMakeLists.txt  README.md  command.sh
example/: sarcasm1v1.dev1.nn  sarcasm1v1.test1.nn  sarcasm1v1.train1.nn
src/: CMakeLists.txt
src/NNWordLocal/: CMakeLists.txt  NNWordLocal.cpp  NNWordLocal.h
src/NNWordLocal/model/: ComputionGraph.h  Driver.h  ModelParams.h
src/NNWordLocalContext/: CMakeLists.txt  NNWordLocalContext.cpp  NNWordLocalContext.h
src/NNWordLocalContext/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNWordLocalContextSeparate/: CMakeLists.txt  NNWordLocalContextSeparate.cpp
src/NNWordLocalContextSeparate/model/: ComputionGraph.h  Driver.h  ModelParams.h
src/SparseLocalContext/: CMakeLists.txt  SparseLocalContext.cpp  SparseLocalContext.h
src/SparseLocalContext/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/basic/: Example.h  Instance.h  InstanceReader.h  InstanceWriter.h  Options.h  Pipe.h
